Use todo example

--- a/now.json
+++ b/now.json
@@ -8,7 +8,7 @@
       "src": "now.js",
       "use": "@now/node",
       "config": {
-        "includeFiles": "dist/**"
+        "includeFiles": ["dist/**", "public/**"]
       }
     }
   ],
