--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
     "@keystonejs/auth-password": "^5.0.1",
     "@keystonejs/fields": "^6.0.0",
     "@keystonejs/keystone": "^5.3.0",
-    "connect-mongo": "^3.2.0",
-    "cross-env": "^5.2.0",
-    "express-session": "^1.17.0"
+    "cross-env": "^5.2.0"
   }
 }
