--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@keystonejs/adapter-mongoose": "^5.1.3",
     "@keystonejs/app-admin-ui": "^5.3.0",
     "@keystonejs/app-graphql": "^5.0.1",
+    "@keystonejs/app-static": "^5.0.0",
     "@keystonejs/auth-password": "^5.0.1",
     "@keystonejs/fields": "^6.0.0",
     "@keystonejs/keystone": "^5.3.0",
